ABM de productos

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Bienvenido a mi proyecto de ABM de Productos</h1>
+    <p> Este es un proyecto lo hice de la manera mas simple debido a mi limitado conocimiento sobre HTML y CSS</p>
+    <p>Aun asi espero que le guste.</p>
 </div>
