--- a/Views/Productoes/Delete.cshtml
+++ b/Views/Productoes/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Borrar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Estas seguro que deseas borrar el siguiente producto?</h3>
 <div>
     <h4>Producto</h4>
     <hr />
@@ -46,6 +46,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="ProductoId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index" class="btn btn-dark">Volver</a>
     </form>
 </div>
