--- a/Views/Productoes/Index.cshtml
+++ b/Views/Productoes/Index.cshtml
@@ -4,10 +4,12 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-
+<h1>ABM de Productos</h1>
+<style>
+    
+</style>
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-success">Agregar nuevo producto</a>
 </p>
 <table class="table">
     <thead>
